# ai-extract-pdfs

./: .gitignore  README.md  create_base_structure.py  dataset.yaml  extract_data.py  pdfs_to_images.py  pyproject.toml  training_model.py
datasets/dataset/labels/train/: Guia_AXL4E19_598289827.txt  Guia_AXL4E19_598289830.txt  example_1.txt  example_2.txt
datasets/dataset/labels/val/: Guia_AXL4E19_603725617.txt
